Tue Aug 31 16:23:49 1993  Kevin Layer  (layer@sole)

	* fi-site-init.el: fi::emacs-type, which tells which type of emacs
	we are running; install fix for fi::build-time.

	* Makefile: load fi-version.el at byte-compile time

	* fi-keys.el: fi::emacs-type
	* fi-leep.el: fi::emacs-type
	* fi-utils.el: fi::emacs-type

*******************************************************************************
2.0.7, limited test release
*******************************************************************************

Tue Aug 31 12:01:14 1993  Kevin Layer  (layer@sole)

	* fi-changes.el: fix remaining problems with numbered backups.
	The problem was that find-backup-file-name for numbered backups
	returns the "next" backup filename; fix docstrings.

	* fi-gnu.el: new file

	* fi-site-init.el: add load of fi-gnu.elc.

	* fi-utils.el: fsf emacs 19 fix

Thu Aug 12 16:42:02 1993  Kevin Layer  (layer@sole)

	* UserGuide.n: remove fi:restart-common-lisp, since it is complete
	redundant.

>>>	* fi-changes.el: new variable fi:change-definitions-since-default.

	* fi-lemacs.el: remove ref to fi:restart-common-lisp.

	* fi-modes.el: fix for "-*- package: -*-" mode line

	* fi-subproc.el: detect when rsh fails and print something
	intelligent; remove fi:restart-common-lisp

*******************************************************************************
2.0.6, limited test release
*******************************************************************************

Wed Aug 11 10:05:19 1993  Kevin Layer  (layer@sole)

	* fi-keys.el: fix for fsf emacs 19

	* fi-lep.el: fix doc string

Tue Jul 27 13:07:02 1993  Kevin Layer  (layer at sole)

	* clmanaux.c: exit status <0 means `failed'
	* clman.c: exit status 0 means `failed'
	* makeman.c: exit status -1 means `failed'
	* clman.h: extern for `failed'

	* fi-basic-lep.el: open-network-stream -> fi::open-network-stream;
	prin1-to-string -> fi::prin1-to-string

	* fi-clman.el: use minibuffer in `failed' case

	* fi-leep-lemacs.el: start of fix for bug2757
