@@ -1,8 +1,8 @@
 		    GNU Emacs-Allegro CL Interface
 			      User Guide
-			    Release 2.0.7
+			    Release 2.0.8
 
-$Header: /repo/cvs.copy/eli/Attic/UserGuide.n,v 1.45 1993/08/31 19:10:28 layer Exp $
+$Header: /repo/cvs.copy/eli/Attic/UserGuide.n,v 1.46 1993/09/01 03:24:26 layer Exp $
 
 			     Introduction
 
@@ -826,6 +826,7 @@ Functions and Variables for editing Common Lisp programs:
 %% fi:lisp-electric-semicolon
 %% fi:parse-mode-line-and-package
 %% fi:package
+%% fi:readtable
 %% fi:default-package
 %% fi:pop-to-sublisp-buffer-after-lisp-eval
 %% fi:pop-up-temp-window-behavior
